WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311317
REGRESSION(
310087@main
): [GStreamer] fast/mediastream/MediaStream-video-element-track-stop.html is a flaky timeout / failure
https://bugs.webkit.org/show_bug.cgi?id=311317
Summary
REGRESSION(310087@main): [GStreamer] fast/mediastream/MediaStream-video-eleme...
Claudio Saavedra
Reported
2026-04-01 22:01:46 PDT
This test was failing consistently but it started flakily timing out around
310089@main
. Not necessarily because of that change, but around that time:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fmediastream%2FMediaStream-video-element-track-stop.html&platform=GTK&platform=WPE
stderr when timing out: 0:00:10.345510431 1435672 0x555bed682610 ERROR pulse pulsedeviceprovider.c:571:gst_pulse_device_provider_start:<pulsedeviceprovider0> Failed to connect: Connection refused 0:00:10.345931852 1435672 0x555bed682610 ERROR pulse pulsedeviceprovider.c:466:gst_pulse_device_provider_probe:<pulsedeviceprovider0> Failed to connect: Invalid argument 0:00:10.385767495 1435672 0x555bed682610 ERROR video-info video-info.c:595:gst_video_info_from_caps: no format given diff when timing out: --- /sdk/webkit/layout-test-results/fast/mediastream/MediaStream-video-element-track-stop-expected.txt +++ /sdk/webkit/layout-test-results/fast/mediastream/MediaStream-video-element-track-stop-actual.txt @@ -1,3 +1,5 @@ +FAIL: Timed out waiting for notifyDone to be called + Tests MediaStreamTrack callbacks. On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". @@ -47,21 +49,5 @@ mediaStream.getVideoTracks()[0].stop() mediaStream.getAudioTracks()[0].stop() -Event 'ended' +Event 'canplaythrough' -**** re-check states now that the video stream has ended **** -PASS video.ended is true -PASS video.videoWidth is 0 -PASS video.videoHeight is 0 - -PASS video.videoTracks.length is 1 -PASS video.videoTracks.selectedIndex is -1 -PASS video.videoTracks[0].selected is false - -PASS mediaStream.getVideoTracks()[0].enabled is true -PASS mediaStream.getVideoTracks()[0].readyState is "ended" - -PASS successfullyParsed is true - -TEST COMPLETE - stderr when it fails: 0:00:06.192102790 58223 0x559a628a1820 ERROR pulse pulsedeviceprovider.c:571:gst_pulse_device_provider_start:<pulsedeviceprovider0> Failed to connect: Connection refused 0:00:06.192531575 58223 0x559a628a1820 ERROR pulse pulsedeviceprovider.c:466:gst_pulse_device_provider_probe:<pulsedeviceprovider0> Failed to connect: Invalid argument 0:00:06.238394812 58223 0x559a628a1820 ERROR video-info video-info.c:595:gst_video_info_from_caps: no format given diff when it fails: --- /sdk/webkit/layout-test-results/fast/mediastream/MediaStream-video-element-track-stop-expected.txt +++ /sdk/webkit/layout-test-results/fast/mediastream/MediaStream-video-element-track-stop-actual.txt @@ -47,6 +47,7 @@ mediaStream.getVideoTracks()[0].stop() mediaStream.getAudioTracks()[0].stop() +Event 'canplaythrough' Event 'ended' **** re-check states now that the video stream has ended **** @@ -54,7 +55,7 @@ PASS video.videoWidth is 0 PASS video.videoHeight is 0 -PASS video.videoTracks.length is 1 +FAIL video.videoTracks.length should be 1. Was 2. PASS video.videoTracks.selectedIndex is -1 PASS video.videoTracks[0].selected is false
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2026-04-02 04:10:43 PDT
Similar situation with imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-removetrack.https.html See
https://build.webkit.org/results/GTK-Linux-64-bit-Release-Tests/310431@main%20(24341)/results.html
Claudio Saavedra
Comment 2
2026-04-02 04:12:40 PDT
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fmediacapture-streams%2FMediaStream-removetrack.https.html&test=fast%2Fmediastream%2FMediaStream-video-element-track-stop.html&platform=GTK&platform=WPE
Philippe Normand
Comment 3
2026-04-03 07:43:10 PDT
***
Bug 307032
has been marked as a duplicate of this bug. ***
Philippe Normand
Comment 4
2026-04-03 07:48:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61979
EWS
Comment 5
2026-04-06 04:59:44 PDT
Committed
310636@main
(bdd2974c9e82): <
https://commits.webkit.org/310636@main
> Reviewed commits have been landed. Closing PR #61979 and removing active labels.
Radar WebKit Bug Importer
Comment 6
2026-04-06 05:00:16 PDT
<
rdar://problem/174153504
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug