REGRESSION(310087@main): [GStreamer] fast/mediastream/MediaStream-video-element-track-stop.html is a flaky timeout / failure https://bugs.webkit.org/show_bug.cgi?id=311317

Reviewed by Xabier Rodriguez-Calvar.

The fast/mediastream/MediaStream-video-element-track-stop.html test was timing out due to incorrect
return value from the player ::ended() method, we no longer need to special-case MediaStream there
now that the pipeline EOS state is READY. Then the test failed due to another pre-existing issue
that this PR fixes, disabled MediaStream tracks had a new ID, leading to the player adding a new
VideoTrack for that, hence the test reporting 2 video tracks instead of one after stopping.

Passing-by, webkitMediaStreamNew now returns a GRefPtr instead of a raw pointer and some logging
improvements were added to the player.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::play):
(WebCore::MediaPlayerPrivateGStreamer::changePipelineState):
(WebCore::MediaPlayerPrivateGStreamer::updateTracks):
(WebCore::MediaPlayerPrivateGStreamer::updateStates):
(WebCore::MediaPlayerPrivateGStreamer::ended const):
* Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
(webkitMediaStreamNew):

Canonical link: https://commits.webkit.org/310636@main